--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <a href="/"> <p>Web Studio</p> </a>
+      <a href="/">Web Studio</a>
       <nav>
         <ul>
           <li><a href="/">Studio</a></li>
@@ -55,11 +55,34 @@
     <section>
       <h2>Our Team</h2>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>
+          <img src="images/img-3.jpg" alt="Worker number 1" />
+          <p>Mark Guerrero</p>
+          <p>Product Designer</p>
+        </li>
+        <li>
+          <img src="images/img-2.jpg" alt="Worker number 2" />
+          <p>Tom Ford</p>
+          <p>Frontend Developer</p>
+        </li>
+        <li>
+          <img src="images/img-1.jpg" alt="Worker number 3" />
+          <p>Camila Garcia</p>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src="images/img.jpg" alt="Worker number 4" />
+          <p>Daniel Wilson</p>
+          <p>UI Designer</p>
+        </li>
       </ul>
     </section>
+    <footer>
+      <a href="/">Web studio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
