--- a/index.html
+++ b/index.html
@@ -25,29 +25,29 @@
         <li>
           <h3>Strategy</h3>
           <p>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
+            Our goal is to identify the business problem to walk away with the perfect and creative
+            solution.
           </p>
         </li>
         <li>
           <h3>Punctuality</h3>
           <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
+            Bring the key message to the brand's audience for the best price within the shortest
+            possible time.
           </p>
         </li>
         <li>
           <h3>Diligence</h3>
           <p>
-            Research and confirm brands with the strongest digital growth
-            opportunities and minimize risk.
+            Research and confirm brands with the strongest digital growth opportunities and minimize
+            risk.
           </p>
         </li>
         <li>
           <h3>Technologies</h3>
           <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
+            Design practice focused on digital experiences. We bring forth a deep passion for
+            problem-solving.
           </p>
         </li>
       </ul>
@@ -56,22 +56,22 @@
       <h2>Our Team</h2>
       <ul>
         <li>
-          <img src="images/img-3.jpg" alt="Worker number 1" />
+          <img src="images/img-3.jpg" alt="Worker number 1" width="264" height="260" />
           <p>Mark Guerrero</p>
           <p>Product Designer</p>
         </li>
         <li>
-          <img src="images/img-2.jpg" alt="Worker number 2" />
+          <img src="images/img-2.jpg" alt="Worker number 2" width="264" height="260" />
           <p>Tom Ford</p>
           <p>Frontend Developer</p>
         </li>
         <li>
-          <img src="images/img-1.jpg" alt="Worker number 3" />
+          <img src="images/img-1.jpg" alt="Worker number 3" width="264" height="260" />
           <p>Camila Garcia</p>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="images/img.jpg" alt="Worker number 4" />
+          <img src="images/img.jpg" alt="Worker number 4" width="264" height="260" />
           <p>Daniel Wilson</p>
           <p>UI Designer</p>
         </li>
@@ -80,8 +80,8 @@
     <footer>
       <a href="/">Web studio</a>
       <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
+        Increase the flow of customers and sales for your business with digital marketing & growth
+        solutions.
       </p>
     </footer>
   </body>
