--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <a href="/">Web Studio</a>
+      <a href="./index.html">WebStudio</a>
       <nav>
         <ul>
           <li><a href="/">Studio</a></li>
@@ -15,74 +15,84 @@
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <p>info@devstudio.com</p>
-      <p>+11 (000) 111-11-11</p>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
-    <main><h1>Effective Solutions for Your Business</h1></main>
-    <button type="button">Order Service</button>
-    <section>
-      <ul>
-        <li>
-          <h3>Strategy</h3>
-          <p>
-            Our goal is to identify the business problem to walk away with the perfect and creative
-            solution.
-          </p>
-        </li>
-        <li>
-          <h3>Punctuality</h3>
-          <p>
-            Bring the key message to the brand's audience for the best price within the shortest
-            possible time.
-          </p>
-        </li>
-        <li>
-          <h3>Diligence</h3>
-          <p>
-            Research and confirm brands with the strongest digital growth opportunities and minimize
-            risk.
-          </p>
-        </li>
-        <li>
-          <h3>Technologies</h3>
-          <p>
-            Design practice focused on digital experiences. We bring forth a deep passion for
-            problem-solving.
-          </p>
-        </li>
-      </ul>
-    </section>
-    <section>
-      <h2>Our Team</h2>
-      <ul>
-        <li>
-          <img src="images/img-3.jpg" alt="Worker number 1" width="264" height="260" />
-          <p>Mark Guerrero</p>
-          <p>Product Designer</p>
-        </li>
-        <li>
-          <img src="images/img-2.jpg" alt="Worker number 2" width="264" height="260" />
-          <p>Tom Ford</p>
-          <p>Frontend Developer</p>
-        </li>
-        <li>
-          <img src="images/img-1.jpg" alt="Worker number 3" width="264" height="260" />
-          <p>Camila Garcia</p>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img src="images/img.jpg" alt="Worker number 4" width="264" height="260" />
-          <p>Daniel Wilson</p>
-          <p>UI Designer</p>
-        </li>
-      </ul>
-    </section>
-    <footer>
-      <a href="/">Web studio</a>
-      <p>
-        Increase the flow of customers and sales for your business with digital marketing & growth
-        solutions.
-      </p>
-    </footer>
+    <main>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+
+        <button type="button">Order Service</button>
+      </section>
+      <section>
+        <h2>Features</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the perfect and
+              creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price within the shortest
+              possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands with the strongest digital growth opportunities and
+              minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a deep passion for
+              problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img src="images/img-3.jpg" alt="Worker number 1" width="264" height="260" />
+            <p>Mark Guerrero</p>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="images/img-2.jpg" alt="Worker number 2" width="264" height="260" />
+            <p>Tom Ford</p>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="images/img-1.jpg" alt="Worker number 3" width="264" height="260" />
+            <p>Camila Garcia</p>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="images/img.jpg" alt="Worker number 4" width="264" height="260" />
+            <p>Daniel Wilson</p>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <footer>
+        <a href="/">Web studio</a>
+        <p>
+          Increase the flow of customers and sales for your business with digital marketing & growth
+          solutions.
+        </p>
+      </footer>
+    </main>
   </body>
 </html>
