--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">WebStudio</a>
       <nav>
+        <a href="./index.html"> WebStudio </a>
         <ul>
           <li><a href="/">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -65,29 +65,29 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="images/img-3.jpg" alt="Worker number 1" width="264" height="260" />
-            <p>Mark Guerrero</p>
+            <img src="./images/img-3.jpg" alt="Worker number 1" width="264" height="260" />
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/img-2.jpg" alt="Worker number 2" width="264" height="260" />
-            <p>Tom Ford</p>
+            <img src="./images/img-2.jpg" alt="Worker number 2" width="264" height="260" />
+            <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="images/img-1.jpg" alt="Worker number 3" width="264" height="260" />
-            <p>Camila Garcia</p>
+            <img src="./images/img-1.jpg" alt="Worker number 3" width="264" height="260" />
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images/img.jpg" alt="Worker number 4" width="264" height="260" />
-            <p>Daniel Wilson</p>
+            <img src="./images/img.jpg" alt="Worker number 4" width="264" height="260" />
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
       <footer>
-        <a href="/">Web studio</a>
+        <a href="./index.html">Webstudio</a>
         <p>
           Increase the flow of customers and sales for your business with digital marketing & growth
           solutions.
